# Alien-Invasion

./: CMakeLists.txt  Main Orig.out  Main Rel.out  Main.out  Makefile
assets/: explosion.tga  fire.tga  metal.tga
assets/Castle/: brick.tga  gate.tga
assets/Skybox/: up.tga
controller/: loadTGA.h  main.cpp  main.h
model/Cannon/: Cannon.cpp  Cannon.h
model/Castle/: Castle.cpp  Castle.h
model/Pottery/: Pottery.cpp  Pottery.h
model/Robots/: Robots.cpp  Robots.h
model/Shapes/: Shapes.cpp  Shapes.h
model/Skybox/: Skybox.cpp  Skybox.h
model/SpaceShip/: Spaceship.cpp  Spaceship.h
model/Wineglass/: Wineglass.cpp  Wineglass.h
